stylePricing.css
body {
    --btn-primary: #7D7DF7;
    --border: #C0BFBF;
    --link-color: #505F98;
    --btn-primary-dark: #111b47;
    --btn-secondary: transparent;
}

.navbar {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid var(--border);
}

.navbar a {
    color: var(--link-color);
}

.pages {
    display: flex;
    justify-content: flex-start;
    width: 60%;
    align-items: center;
    gap: 24px;
}

.general {
    width: 40%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 24px;
}

.head {
    margin: 128px 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 12px;
}

.title {
    display: flex;
    justify-content: center;
    align-items: center;
}

.title > .title {
    font-size: 64px;
    font-family: 'Roboto';
}

.title > img {
    margin: -12px 0;
}

.description {
    width: 80%;
    display: inline;
    font-size: 14px;
    font-family: 'Roboto';
}

.actions {
    width: 80%;
    display: flex;
    justify-content: space-between;
    z-index: 10;
}

.actions > a {
    padding: 8px 0;
    width: 45%;
    font-size: 16px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    text-decoration: none;
    text-align: center;
}

.signup {
    background-color: var(--btn-primary-dark);
    color: white;
    border: none;
}

.signin {
    background-color: var(--btn-secondary);
    color: black;
    border: 2px solid black;
}

.splash {
    position: fixed;
    bottom: 0;
    right: 0;
    height: calc(100vh - 128px);
}

.phone {
    z-index: 10;
    position: fixed;
    bottom: 48px;
    right: 124px;
    height: calc(90vh - 128px);
}

.btn {
    text-decoration: none;
    background-color: var(--btn-primary);
    padding: 4px 12px;
    color: white !important;
}

.copy {
    position: fixed;
    bottom: 12px;
    left: 12px;
    color: grey;
}

.login_form {
    margin: 64px auto;
    width: 50vh;
    max-width: 600px;
    display: flex;
    flex-direction: column;
    gap: 24px;
    align-items: center;
}

.login_form > input {
    width: 100%;
    height: 64px;
    text-align: center;
    font-size: 24px;
    cursor: pointer;
}

.notes_main {
    display: flex;
    height: calc(100vh - 67px);
}

.sidebar {
    height: calc(100% - 48px);
    width: 20%;
    border-right: 1px solid var(--border);
    padding: 24px;
}

.sidebar > .top {
    font-size: 16px;
    display: flex;
    justify-content: space-between;
    font-weight: bold;
    font-family: 'Roboto';
    border-bottom: 1px solid var(--border);
    padding-bottom: 16px;
}

.notes {
    width: 80%;
    height: 100%;
    background-image: linear-gradient(0deg, var(--border) 5%, #ffffff 5%, #ffffff 100%);
    background-size: 28.28px 28.28px;
}

.writing {
    resize: none;
    background: transparent;
    width: 90%;
    margin: 0 0 0 10%;
    height: calc(100% - 2px);
    border: none;
    border-left: 1px solid red;
    outline: none;
    line-height: 28.28px;
    font-size: 20px;
}

.files {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 12px;
    align-items: center;
    padding: 12px 0;
}

.files > button {
    width: 80%;
    height: 28px;
    font-size: 20px;
}

.features {
    display: flex;
    justify-content: center;
    align-items: stretch;
    flex-direction: row;
    width: 70%;
   
}

.feature-box {
    flex: 1;
    border: 1px solid #000;
    padding: 20px;
    margin: 0 20px;
    box-sizing: border-box;
    background-color: #f9f9f9; /* This will make the boxes visible */
    height: 500px;
    width: 80%;
}

.feature-box h2,.feature-box h3 .feature-box p {
    text-align: center; /* This will center the text */
}

